tests/snapshots/composition/expanded_singleton_dict.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/expanded_singleton_dict.input.py
---
"""
A long single-line dict whose entries each carry a single-key nested
dict value. The outer dict overflows the inline budget, and after
expansion every nested single-key dict falls into a one-row colon
alignment group.

Rules:
- collection_layout
- alphabetize
- align_colons
"""

CONFIG = {
    "alpha" : {"only_alpha_key": 1},
    "beta"  : {"only_beta_key": 2},
    "delta" : {"only_delta_key": 4},
    "gamma" : {"only_gamma_key": 3}
}
