tests/snapshots/composition/expanded_union_dict.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/expanded_union_dict.input.py
---
"""
A long single-line dict whose values are `Optional` and `Union`
expressions from `typing`. The outer dict overflows the inline
budget and the values carry legacy union syntax.

Rules:
- collection_layout
- alphabetize
- align_colons
"""

from typing import Optional, Union

ALIASES = {
    "extended_label" : Union[str, None],
    "fallback"       : Union[int, str],
    "primary"        : Optional[str],
    "trailing_value" : Optional[int]
}
