tests/snapshots/composition/function_with_dict_default.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/function_with_dict_default.input.py
---
collection-layout@549..583
