tests/snapshots/composition/future_with_imports_and_blanks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/future_with_imports_and_blanks.input.py
---
align-imports@418..419
align-imports@440..441
alphabetize@380..483
blank-lines@447..451
unused-future-annotations@448..483
