tests/snapshots/composition/future_with_imports_and_blanks.input.py.snap
---
source: tests/integration.rs
expression: output
input_file: tests/fixtures/composition/future_with_imports_and_blanks.input.py
---
"""
Module top with `from __future__ import annotations`, a run of
aliased imports out of order, and irregular blank-line spacing
before the first function. The full rule subset removes the unused
future, sorts the aliased imports, aligns the `as` column, and
normalizes the blank-line cushion.

Rules:
- alphabetize
- unused_future_annotations
- blank_lines
- align_imports
"""

import collections as col
import numpy       as np
import requests    as req


def add(a, b):
    return a + b
