tests/snapshots/composition/import_blocks.diagnostics.snap
---
source: tests/diagnostics.rs
expression: render(&diagnostics)
input_file: tests/fixtures/composition/import_blocks.input.py
---
align-imports@218..219
